# project-template

./: LICENSE  README.md
C/: cookiecutter.json
C/{{cookiecutter.project_slug}}/src/: Main.c  README.md
Cpp/: cookiecutter.json
Cpp/{{cookiecutter.project_slug}}/src/: main.cpp
java/ant/PRJ301-template/: cookiecutter.json
java/ant/PRJ301-template/{{cookiecutter.project_slug}}/: build.xml
java/ant/PRJ301-template/{{cookiecutter.project_slug}}/web/: index.jsp
java/ant/PRO192-template/: cookiecutter.json
java/ant/PRO192-template/{{cookiecutter.project_slug}}/: build.xml
java/maven/PRJ301-template/: cookiecutter.json
java/maven/PRJ301-template/{{cookiecutter.project_slug}}/: pom.xml
java/maven/PRO192-template/: cookiecutter.json
java/maven/PRO192-template/{{cookiecutter.project_slug}}/: pom.xml
python/: cookiecutter.json
python/PFP191/hooks/: post_gen_project.py
python/PFP191/{{ cookiecutter.project_slug }}/: README.md
python/PFP191/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.pkg_name }}/: main.py
python/PFP191/{{ cookiecutter.project_slug }}/tests/: test_main.py
python/PWD301/: cookiecutter.json
python/PWD301/hooks/: post_gen_project.py
python/PWD301/{{ cookiecutter.project_slug }}/: .env.example  README.md  app.py  config.py  requirements.txt  run.bat
python/PWD301/{{ cookiecutter.project_slug }}/app/: models.py  routes.py
python/PWD301/{{ cookiecutter.project_slug }}/app/templates/: about.html  base.html  contact.html  (+1 more)
python/hooks/: post_gen_project.py
python/{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
(+7 files in other folders)
